--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "feather-icons-react": "^0.5.0",
     "framer-motion": "^6.4.1",
     "next": "latest",
+    "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-animation-on-scroll": "^5.1.0",
